# solana-anchor-react-minimal-example

./: .gitignore  LICENSE  README.md  package.json
1.initialize/: Anchor.toml
1.initialize/app/: package.json
1.initialize/tests/: initialize.js
2.crud/: Anchor.toml
2.crud/tests/: crud.js
3.sendAndConfirmTransaction/: Anchor.toml  package.json
3.sendAndConfirmTransaction/tests/: sendAndConfirmTransaction.js
4.signThenTransaction/app/: package.json
anchor/: .gitignore  README.md
anchor/counter/: Anchor.toml  README.md  package.json
anchor/cpi_Cross_Program_Invocations/: Anchor.toml  README.md
anchor/escrow/: Anchor.toml  README.md  package.json
anchor/escrow/anchor-cli-v0.22.1/programs/escrow/: Cargo.toml
anchor/guess_the_number/: Anchor.toml  README.md  package.json
anchor/guess_the_number/programs/guess/: Cargo.toml
anchor/guess_the_number/programs/guess/src/: lib.rs
anchor/ido-pool/: README.md
anchor/mint_nft_using_metaplex_anchor_in_localnet/: Anchor.toml  README.md  package.json
anchor/pda_Program_Derived_Addresses/: Anchor.toml  README.md
anchor/pda__Program_Derived_Addresses/: README.md  package.json
anchor/post_to_earn/: Anchor.toml  README.md  package.json
anchor/post_to_earn/programs/post_to_earn/: Cargo.toml
anchor/post_to_earn/programs/post_to_earn/src/: lib.rs
anchor/send_and_confirm_transaction/programs/sendAndConfirmTransaction/: Cargo.toml
anchor/token-proxy/: README.md  package.json
anchor/token-proxy/latest/programs/trsf/: Cargo.toml
anchor/transfer-in-program/: Anchor.toml  README.md  package.json
anchor/transfer-sol/: Anchor.toml  package.json
anchor/transfer-sol-from-pda_invoke_signed/: README.md  package.json
anchor/transfer-sol-from-pda_transfer_service_fee_lamports/: README.md
anchor/transfer_sol_from_pda/: Anchor.toml  README.md
cli/metaplex_sugar/: README.md
cli/solana/: createVanityKeypair.md
docs/: .gitignore  README.md  Solana_Blockchain_Outline_Figure.pptx
frontend/: create_mint_and_transfer_tokens.js  custom_programs.js  keypair.js  message.js  package.json  publickey.js  transaction.js
full-stack/: .gitignore  README.md
full-stack/arweave/: README.md  package.json
full-stack/crud/: README.md
full-stack/escrow/: README.md
full-stack/ido-pool/: Anchor.toml  README.md  package.json
full-stack/initialize/: Anchor.toml  README.md
full-stack/send_and_confirm_transaction/: README.md
full-stack/token-proxy/: Anchor.toml  README.md  package.json
full-stack/token-proxy/anchor/programs/token-proxy/: Cargo.toml
full-stack/token-proxy/anchor/programs/token-proxy/src/: lib.rs
js/: README.md  connection.js  custom_programs.js  manually_transaction.js  multiple_signers_and_transfer.js  multiple_transfer.js  transaction.js
js-ts/arweave/: arlocal_builtin_example.js  create_tx.js  create_tx_and_sign.js  get_tx_data.js  get_wallet_address.js  get_wallet_balance.js
js-ts/mint-and-transfer-nft/: README.md  tsconfig.json
js/arweave/: README.md  arlocal_builtin_example.js  create_transaction.js  create_transaction_with_tags.js  create_tx.js  create_tx_and_sign.js  create_tx_sign_and_submit_file.js  create_tx_sign_and_submit_json.js  key.json  (+15 more)
react/: README.md
rust/: README.md
vanilla/rust/: Cargo.toml
vanilla/rust/src/: borsh.rs  lib.rs
(+800 files in other folders)
