[package]
name = "guess"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "guess"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# following versions get "error[E0658]: destructuring assignments are unstable. _ = TokenInstruction::unpack(&expect[0..2])" error.
# anchor-lang = "0.25.0"
# anchor-spl = "0.25.0"
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
spl-token = "~3.3.0"