[package]
name = "token-proxy"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_proxy"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.22.0"
anchor-spl = "0.22.0"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
